Sync (#34)
* [MOD ] Messages when log in fails

* Refactor errors (#32)

* [MOD] default error response for every path

* Dump error-components

* [MOD] Changed endpoint /user/:userId/profile to /user/:userId

* [ADD] Patch users/:userId (#33)

* [ADD] PATCH /users/:userId

* Fixed bug

* [ADD] Scripts
