# assets/api.yml
@@ -38,10 +38,8 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/getAllUsers'
-        409:
-          $ref: '#/components/responses/409'
-        500:
-          $ref: '#/components/responses/500'
+        default:
+          $ref: '#/components/responses/Error'
 
     post:
       summary: Register a new user
@@ -53,14 +51,8 @@ paths:
       responses:
         201:
           description: 'User was registered successfully.'
-        400:
-          $ref: '#/components/responses/400'
-        409:
-          $ref: '#/components/responses/409'
-        415:
-          $ref: '#/components/responses/415'
-        500:
-          $ref: '#/components/responses/500'
+        default:
+          $ref: '#/components/responses/Error'
 
   /users/session:
     post:
@@ -73,16 +65,10 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/postSession'
-        400:
-          $ref: '#/components/responses/400'
-        409:
-          $ref: '#/components/responses/409'
-        415:
-          $ref: '#/components/responses/415'
-        500:
-          $ref: '#/components/responses/500'
+        default:
+          $ref: '#/components/responses/Error'
 
-  /users/{userId}/profile:
+  /users/{userId}:
     get:
       summary: Get a user's profile
       description: Allow users to retrieve a user's profile by id.
@@ -98,14 +84,33 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/getProfile'
-        400:
-          $ref: '#/components/responses/400'
-        404:
-          $ref: '#/components/responses/404'
-        415:
-          $ref: '#/components/responses/415'
-        500:
-          $ref: '#/components/responses/500'
+        default:
+          $ref: '#/components/responses/Error'
+
+    patch:
+      summary: Modify the information of a user's profile
+      description: Allows the user to update its information.
+      tags:
+        - Users
+      parameters:
+        - in: path
+          name: userId
+          schema:
+            $ref: '#/components/schemas/Id'
+          required: true
+          description: uuid of the user
+        - in: header
+          name: uid
+          schema:
+            $ref: '#/components/schemas/Id'
+          required: true
+      requestBody:
+        $ref: '#/components/requestBodies/patchUser'
+      responses:
+        200:
+          description: 'User information updated successfully.'
+        default:
+          $ref: '#/components/responses/Error'
 
   # ADMINS
   /admins:
@@ -119,14 +124,8 @@ paths:
       responses:
         201:
           description: 'Admin was registered successfully.'
-        400:
-          $ref: '#/components/responses/400'
-        409:
-          $ref: '#/components/responses/409'
-        415:
-          $ref: '#/components/responses/415'
-        500:
-          $ref: '#/components/responses/500'
+        default:
+          $ref: '#/components/responses/Error'
 
   /admins/session:
     post:
@@ -139,14 +138,8 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/postSession'
-        400:
-          $ref: '#/components/responses/400'
-        409:
-          $ref: '#/components/responses/409'
-        415:
-          $ref: '#/components/responses/415'
-        500:
-          $ref: '#/components/responses/500'
+        default:
+          $ref: '#/components/responses/Error'
 
   # STATUS
   /ping:
@@ -156,10 +149,8 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/ping'
-        400:
-          $ref: '#/components/responses/400'
-        415:
-          $ref: '#/components/responses/415'
+        default:
+          $ref: '#/components/responses/Error'
 
   /health:
     get:
@@ -168,10 +159,8 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/health'
-        400:
-          $ref: '#/components/responses/400'
-        415:
-          $ref: '#/components/responses/415'
+        default:
+          $ref: '#/components/responses/Error'
 
 # =============================================================================
 
@@ -179,6 +168,13 @@ components:
   # ---------------------------------------------------------------------------
   requestBodies:
     # USERS
+    patchUser:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/PatchUserData'
+
     postUser:
       required: true
       content:
@@ -212,51 +208,10 @@ components:
 
   # ---------------------------------------------------------------------------
   responses:
-    # ERRORS
-    400:
-      description: Bad request.
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Error'
-
-    401:
-      description: Unauthorized.
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Error'
-
-    403:
-      description: Forbidden.
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Error'
-
-    404:
-      description: Not found.
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Error'
-
-    409:
-      description: Conflict.
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Error'
-
-    415:
-      description: Unsupported Media Type.
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Error'
-
-    500:
-      description: Internal Server Error.
+    Error:
+      description: >
+        An error has occured. Check response body for more
+        information about what happened.
       content:
         application/json:
           schema:
@@ -306,24 +261,19 @@ components:
     Error:
       type: object
       properties:
-        error:
-          type: object
-          properties:
-            status:
-              type: integer
-            name:
-              type: string
-            message:
-              type: string
-            errors:
-              type: array
-              items:
-                type: object
-          required:
-            - status
-            - name
+        status:
+          type: integer
+        name:
+          type: string
+        message:
+          type: string
+        errors:
+          type: array
+          items:
+            type: object
       required:
-        - error
+        - status
+        - name
 
     # TYPES
     Date:
@@ -368,6 +318,24 @@ components:
       required:
         - fbToken
 
+    PatchUserData:
+      type: object
+      properties:
+        city:
+          type: string
+          example: 'Buenos Aires'
+        country:
+          type: string
+          example: 'Argentina'
+        interests:
+          type: array
+          items:
+            type: string
+          example: ['music', 'entertainment', 'productivity']
+        profilePicUrl:
+          $ref: '#/components/schemas/Picture'
+      minProperties: 1
+
     Profile:
       type: object
       properties:
@@ -382,6 +350,17 @@ components:
           example: false
         signupDate:
           $ref: '#/components/schemas/Date'
+        city:
+          type: string
+          example: 'Buenos Aires'
+        country:
+          type: string
+          example: 'Argentina'
+        interests:
+          type: array
+          items:
+            type: string
+          example: ['music', 'entertainment', 'productivity']
         profilePicUrl:
           $ref: '#/components/schemas/Picture'
       required:
@@ -389,6 +368,9 @@ components:
         - lastName
         - banned
         - signupDate
+        - city
+        - country
+        - interests
         - profilePicUrl
 
     User:
